--- a/netlify.toml
+++ b/netlify.toml
@@ -1,68 +1,15 @@
 ﻿[build]
   publish = "."
-  command = "echo 'No build process needed for static site'"
-
-[build.environment]
-  NODE_VERSION = "18"
+  command = "echo 'No build needed for static site'"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-# Security headers
 [[headers]]
   for = "/*"
   [headers.values]
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-    
-# Cache optimization
-[[headers]]
-  for = "/assets/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.css"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.js"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-# SPA routing
-[[redirects]]
-  from = "/student"
-  to = "/student.html"
-  status = 200
-
-[[redirects]]
-  from = "/parent"  
-  to = "/parent.html"
-  status = 200
-
-[[redirects]]
-  from = "/teacher"
-  to = "/teacher.html"
-  status = 200
-
-[[redirects]]
-  from = "/science"
-  to = "/science-hub.html"
-  status = 200
-
-[[redirects]]
-  from = "/technology"
-  to = "/advanced-technology.html"
-  status = 200
-
-# Error page
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 404
