--- a/tracker/manifest.json
+++ b/tracker/manifest.json
@@ -1,22 +1,22 @@
-{
-  "name": "SmartPath with Khensani",
-  "short_name": "SmartPath",
-  "description": "Live student safety tracking with AI assistance",
-  "start_url": "/tracker/map.html",
-  "display": "standalone",
-  "theme_color": "#667eea",
-  "background_color": "#ffffff",
-  "icons": [
+﻿{
+  \"name\": \"SmartPath with Khensani\",
+  \"short_name\": \"SmartPath\",
+  \"description\": \"Live student safety tracking with AI assistance\",
+  \"start_url\": \"/tracker/map.html\",
+  \"display\": \"standalone\",
+  \"theme_color\": \"#667eea\",
+  \"background_color\": \"#ffffff\",
+  \"icons\": [
     {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      \"src\": \"/assets/icons/icon-192.png\",
+      \"sizes\": \"192x192\",
+      \"type\": \"image/png\"
     },
     {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      \"src\": \"/assets/icons/icon-512.png\",
+      \"sizes\": \"512x512\",
+      \"type\": \"image/png\"
     }
   ],
-  "categories": ["education", "navigation", "safety"]
+  \"categories\": [\"education\", \"navigation\", \"safety\"]
 }
