--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,18 @@
-﻿{
-  \"name\": \"smartpath-server\",
-  \"version\": \"1.0.0\",
-  \"description\": \"Backend for SmartPath with Khensani - Real-time student tracking\",
-  \"main\": \"server.js\",
-  \"scripts\": {
-    \"start\": \"node server.js\",
-    \"dev\": \"nodemon server.js\"
+{
+  "name": "mindflow-ai-server",
+  "version": "1.0.0",
+  "description": "Backend for MindFlow AI - Advanced Learning Platform",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  \"dependencies\": {
-    \"express\": \"^4.18.2\",
-    \"socket.io\": \"^4.5.0\",
-    \"cors\": \"^2.8.5\"
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.5.0",
+    "cors": "^2.8.5"
   },
-  \"engines\": {
-    \"node\": \">=14.0.0\"
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
